# databricks-project-accelerators

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  plan.md  project_intent.md  pyproject.toml  zensical.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  integration.yml  publish.yml
docs/: getting-started.md  index.md
docs/accelerators/: ai-bi.md  app-streamlit.md  custom-spark-lib.md  lakebase-app.md  medallion-dbt.md  medallion-sdp.md  medallion-spark.md  mlflow-project.md  python-wheel.md
docs/api/: accelerators.md  deploy.md  industries.md
src/dia/: __init__.py  cli.py
src/dia/accelerators/: __init__.py  base.py
src/dia/accelerators/app_streamlit/: __init__.py  accelerator.py
src/dia/accelerators/dashboard/: __init__.py  accelerator.py
src/dia/accelerators/medallion_sdp/: __init__.py  accelerator.py
src/dia/deploy/: bundle.py
src/dia/industries/: __init__.py
src/dia/industries/finance/: medallion_sdp.yaml
src/dia/templates/app_streamlit/resources/apps/: app.yml.j2
src/dia/templates/dashboard/: .gitignore  databricks.yml.j2
src/dia/templates/dashboard/resources/dashboards/: dashboard.yml.j2
src/dia/templates/dashboard/resources/jobs/: setup_views_job.yml.j2
src/dia/templates/medallion_sdp/: databricks.yml.j2  pyproject.toml.j2
src/dia/templates/medallion_sdp/resources/pipelines/: pipeline.yml.j2
src/dia/templates/medallion_sdp/resources/schemas/: schemas.yml.j2
src/dpa/: __init__.py  cli.py
src/dpa/accelerators/: __init__.py  base.py
src/dpa/accelerators/ai_bi/: __init__.py  accelerator.py
src/dpa/accelerators/app_streamlit/: accelerator.py
src/dpa/accelerators/custom_python_wheel/: __init__.py  accelerator.py
src/dpa/accelerators/custom_spark_lib/: __init__.py  accelerator.py
src/dpa/accelerators/dashboard/: __init__.py  accelerator.py
src/dpa/accelerators/lakebase_app/: __init__.py  accelerator.py
src/dpa/accelerators/medallion_dbt/: __init__.py  accelerator.py
src/dpa/accelerators/medallion_sdp/: __init__.py  accelerator.py
src/dpa/accelerators/medallion_spark/: accelerator.py
src/dpa/accelerators/mlflow_project/: __init__.py  accelerator.py
src/dpa/accelerators/python_wheel/: __init__.py  accelerator.py
src/dpa/templates/ai_bi/: databricks.yml.j2
src/dpa/templates/ai_bi/dashboard/: tpch_overview.lvdash.json.j2
src/dpa/templates/ai_bi/genie/: tpch_genie.geniespace.json.j2
src/dpa/templates/ai_bi/notebooks/: setup_metric_views.py.j2
src/dpa/templates/app_streamlit/: databricks.yml.j2
src/dpa/templates/app_streamlit/app/: app.py.j2  requirements.txt
src/dpa/templates/custom_python_wheel/: .gitignore  azure-pipelines.yml  pyproject.toml.j2
src/dpa/templates/custom_python_wheel/notebooks/: verify_imports.py.j2
src/dpa/templates/custom_python_wheel/tests/: test_functions.py.j2
src/dpa/templates/custom_spark_lib/: databricks.yml.j2  pyproject.toml.j2
src/dpa/templates/dashboard/: databricks.yml.j2
src/dpa/templates/lakebase_app/: databricks.yml.j2
src/dpa/templates/lakebase_app/app/: app.py.j2  app.yaml
src/dpa/templates/medallion_dbt/: .gitignore  databricks.yml.j2  dbt_project.yml.j2  profiles.yml.j2
src/dpa/templates/medallion_dbt/models/: sources.yml
src/dpa/templates/medallion_sdp/: .gitignore  azure-pipelines.yml  databricks.yml.j2
src/dpa/templates/medallion_spark/: databricks.yml.j2
src/dpa/templates/mlflow_project/: .gitignore  databricks.yml.j2
src/dpa/templates/mlflow_project/notebooks/: register.py.j2  score.py.j2  train.py.j2
src/dpa/templates/python_wheel/: databricks.yml.j2  pyproject.toml.j2
src/dpa/templates/python_wheel/notebooks/: build_and_upload.py.j2  verify_imports.py.j2
tests/integration/: conftest.py  test_deploy.py
tests/unit/: test_accelerator.py  test_ai_bi.py  test_app_streamlit.py  test_custom_python_wheel.py  test_custom_spark_lib.py  test_lakebase_app.py  test_medallion_dbt.py  test_medallion_sdp.py  test_medallion_spark.py  test_mlflow_project.py  test_python_wheel.py  test_registry.py
(+94 files in other folders)
