[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-project-accelerators"
version = "0.1.0"
description = "CLI to scaffold Databricks solutions for industry use cases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["databricks", "delta-live-tables", "medallion", "accelerator"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "shellingham>=1.5",
    "jinja2>=3.1",
    "pyyaml>=6",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5", "faker>=25"]
dev = [
    "pytest>=8",
    "pytest-dotenv>=0.5",
    "ruff>=0.9",
    "faker>=25",
]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.29",
]

[project.scripts]
dpa = "dia.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dia"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
env_files = [".env"]
markers = [
    "integration: marks tests that require a live Databricks workspace (run with -m integration)",
]
