[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-project-accelerators"
version = "0.1.1"
description = "CLI to scaffold Databricks solutions for industry use cases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Peter Gormsen", email = "peter.gormsen@twoday.com" },
]
keywords = ["databricks", "delta-live-tables", "medallion", "accelerator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "shellingham>=1.5",
    "jinja2>=3.1",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/pegodk/databricks-project-accelerators"
Repository = "https://github.com/pegodk/databricks-project-accelerators"
Documentation = "https://pegodk.github.io/databricks-project-accelerators/"
"Bug Tracker" = "https://github.com/pegodk/databricks-project-accelerators/issues"

[project.optional-dependencies]
spark = ["pyspark>=3.5", "faker>=25"]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "faker>=25",
]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.29",
]

[project.scripts]
dpa = "dpa.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dpa"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 120
exclude = ["src/dpa/templates"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live Databricks workspace (run with -m integration)",
]
